--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,8 +141,8 @@ jobs:
           command: |
             cd artifacts/terraform/<< parameters.env >>
             terraform apply --auto-approve 
-            terraform output bucket_id > ../../bucket.txt
-            terraform output cloudfront-dist-id > ../../cloudfront-dist-id.txt
+            terraform output bucket_id > ../../bucket_id.txt
+            terraform output cloudfront_dist_id > ../../cloudfront_dist_id.txt
       - persist_to_workspace:
           root: ./
           paths:
@@ -181,7 +181,7 @@ jobs:
       - run:
           name: Deploy to AWS CloudFront
           command: |
-            AWS_CLOUDFRONT_DISTRIBUTION_ID=$(cat artifacts/cloudfront-dist-id.txt | sed 's/\"//g')
+            AWS_CLOUDFRONT_DISTRIBUTION_ID=$(cat artifacts/cloudfront_dist_id.txt | sed 's/\"//g')
             echo $AWS_CLOUDFRONT_DISTRIBUTION_ID
             aws configure set preview.cloudfront true
             if [ "${CIRCLE_BRANCH}" == "main" ]
