--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 executors:
   app-executor:
     docker:
-      - image: circleci/node:16.10.0
+      - image: cimg/node:16.10.0
     working_directory: ~/repo
 
   terraform-executor:
