--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ dist-ssr
 
 # Local .terraform directories
 **/.terraform/*
-**/.terraform.cloud.example/*
+**/.terraform
 
 # .tfstate files
 *.tfstate
