--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,13 @@
 version: 2.1
-
 executors:
   app-executor:
     docker:
       - image: cimg/node:16.10.0
     working_directory: ~/repo
-
   terraform-executor:
     docker:
       - image: hashicorp/terraform:latest
-
 aliases:
-  - &show-current-branch
-    run:
-      name: Show current branch
-      command: echo ${CIRCLE_BRANCH}
   - &restore-cache
     restore_cache:
       keys:
@@ -31,22 +24,20 @@ aliases:
       paths:
         - node_modules
       key: app-{{ checksum "package.json" }}
-  - &build-project
+  - &build-project-dev
     run:
       name: Build Project
       command: |
         yarn install
-        yarn build
+        yarn build:dev
         echo "Build Successful!"
-  - &configure-aws-access
+  - &build-project-prod
     run:
-      name: Configure AWS access
+      name: Build Project Production
       command: |
-        mkdir -p ~/.aws
-        file=~/.aws/credentials
-        echo "[default]" > $file
-        echo "aws_access_key_id = $AWS_ACCESS_KEY_ID" >> $file
-        echo "aws_secret_access_key = $AWS_SECRET_ACCESS_KEY" >> $file 
+        yarn install
+        yarn build:prod
+        echo "Build Successful!"
   - &configure-terraform-cloud
     run:
       name: Configure .terraformrc file locally
@@ -55,47 +46,36 @@ aliases:
         \"$TERRAFORM_TOKEN\"}" > $HOME/.terraformrc
 orbs:
   aws-cli: circleci/aws-cli@3.1
-
 jobs:
   setup:
     executor: app-executor
     steps:
       - checkout
-      - *show-current-branch
       - *restore-cache
       - *install-dependencies
       - *save-cache
       - run:
           name: Copy Terraform folder
           command: |
-            ls
-            pwd
             cp -r terraform artifacts/terraform/
       - persist_to_workspace:
           root: ./
           paths:
-            - artifacts
-
+            - dev/artifacts
+            - prod/artifacts
   linting:
     executor: app-executor
     steps:
       - checkout
-      - *show-current-branch
       - *restore-cache
       - run:
           name: Run Linting
           command: yarn lint
-
-  # prettify:
-  #   executor: app-executor
-  #   steps:
-  #     - checkout
-  #     - *show-current-branch
-  #     - *restore-cache
-  #     - run:
-  #         name: Run Prettier
-  #         command: npm run prettify
-
+  build:
+    executor: app-executor
+    steps:
+      - checkout
+      - *build-project-dev
   terraform-validate:
     parameters:
       env:
@@ -103,8 +83,6 @@ jobs:
     executor: terraform-executor
     steps:
       - checkout
-      - *show-current-branch
-      - *configure-aws-access
       - run:
           name: Terraform Validate and Format
           command: |
@@ -120,9 +98,7 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-          at: ./
-      - *show-current-branch
-      - *configure-aws-access
+          at: ./<< parameters.env >>
       - *configure-terraform-cloud
       - run:
           name: Terraform Plan
@@ -140,21 +116,15 @@ jobs:
       - persist_to_workspace:
           root: ./
           paths:
-            - artifacts
-
-  deploy-to-aws-s3:
+            - << parameters.env >>artifacts
+  deploy-to-aws-s3-dev:
     executor: app-executor
     steps:
       - checkout
       - attach_workspace:
-          at: ./
-      - *show-current-branch
-      - aws-cli/setup:
-          aws-access-key-id: AWS_ACCESS_KEY_ID
-          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-          aws-region: AWS_REGION
-      - *configure-aws-access
-      - *build-project
+          at: ./dev
+      - aws-cli/setup
+      - *build-project-dev
       - run:
           name: Deploy to AWS S3
           command: |
@@ -164,20 +134,14 @@ jobs:
             then 
               aws --region ${AWS_REGION} s3 sync ~/repo/dist s3://${AWS_BUCKET_NAME} --delete
             fi
-
-  deploy-to-aws-cloudfront:
+  deploy-to-aws-cloudfront-dev:
     executor: app-executor
     steps:
       - checkout
       - attach_workspace:
-          at: ./
-      - *show-current-branch
-      - aws-cli/setup:
-          aws-access-key-id: AWS_ACCESS_KEY_ID
-          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-          aws-region: AWS_REGION
-      - *configure-aws-access
-      - *build-project
+          at: ./dev
+      - aws-cli/setup
+      - *build-project-dev
       - run:
           name: Deploy to AWS CloudFront
           command: |
@@ -188,35 +152,65 @@ jobs:
             then 
               aws cloudfront create-invalidation --distribution-id ${AWS_CLOUDFRONT_DISTRIBUTION_ID} --path /\*
             fi
-
+  deploy-to-aws-s3-prod:
+    executor: app-executor
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ./prod
+      - aws-cli/setup
+      - *build-project-prod
+      - run:
+          name: Deploy to AWS S3
+          command: |
+            AWS_BUCKET_NAME=$(cat artifacts/bucket_id.txt | sed 's/\"//g')
+            echo $AWS_BUCKET_NAME
+            if [ "${CIRCLE_BRANCH}" == "main" ]
+            then 
+              aws --region ${AWS_REGION} s3 sync ~/repo/dist s3://${AWS_BUCKET_NAME} --delete
+            fi
+  deploy-to-aws-cloudfront-prod:
+    executor: app-executor
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ./prod
+      - aws-cli/setup
+      - *build-project-prod
+      - run:
+          name: Deploy to AWS CloudFront
+          command: |
+            AWS_CLOUDFRONT_DISTRIBUTION_ID=$(cat artifacts/cloudfront_dist_id.txt | sed 's/\"//g')
+            echo $AWS_CLOUDFRONT_DISTRIBUTION_ID
+            aws configure set preview.cloudfront true
+            if [ "${CIRCLE_BRANCH}" == "main" ]
+            then 
+              aws cloudfront create-invalidation --distribution-id ${AWS_CLOUDFRONT_DISTRIBUTION_ID} --path /\*
+            fi
 workflows:
   build_and_deploy:
     jobs:
-      - setup
+      - setup:
+          context: Web
       - linting:
+          context: Web
           requires:
             - setup
-          filters:
-            branches:
-              only:
-                - main
-      # - prettify:
-      #     requires:
-      #       - setup
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main
-      - terraform-validate:
+      - build:
+          context: Web
           requires:
             - linting
-            # - prettify
+      - terraform-validate:
+          context: Web
+          requires:
+            - build
           env: dev
           filters:
             branches:
               only:
                 - main
       - terraform-plan-and-apply:
+          context: Web
           requires:
             - terraform-validate
           env: dev
@@ -224,16 +218,57 @@ workflows:
             branches:
               only:
                 - main
-      - deploy-to-aws-s3:
+      - deploy-to-aws-s3-dev:
+          context: Web
           requires:
             - terraform-plan-and-apply
           filters:
             branches:
               only:
                 - main
-      - deploy-to-aws-cloudfront:
+      - deploy-to-aws-cloudfront-dev:
+          context: Web
+          env: dev
           requires:
-            - deploy-to-aws-s3
+            - deploy-to-aws-s3-dev
+          filters:
+            branches:
+              only:
+                - main
+      - hold:
+          type: approval
+          requires:
+            - deploy-to-aws-cloudfront-dev
+      - terraform-validate:
+          context: Web
+          requires:
+            - build
+          env: prod
+          filters:
+            branches:
+              only:
+                - main
+      - terraform-plan-and-apply:
+          context: Web
+          requires:
+            - terraform-validate
+          env: prod
+          filters:
+            branches:
+              only:
+                - main
+      - deploy-to-aws-s3-prod:
+          context: Web
+          requires:
+            - terraform-plan-and-apply
+          filters:
+            branches:
+              only:
+                - main
+      - deploy-to-aws-cloudfront-prod:
+          context: Web
+          requires:
+            - deploy-to-aws-s3-prod
           filters:
             branches:
               only:
