fix persist to workspace

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,7 +115,7 @@ jobs:
       - persist_to_workspace:
           root: ./
           paths:
-            - << parameters.env >>/artifacts
+            - artifacts
   deploy-to-aws-s3-dev:
     executor: app-executor
     steps:
