--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,6 +89,22 @@ jobs:
             terraform init -backend=false
             terraform validate
             terraform fmt -check
+  terraform-plan:
+    parameters:
+      env:
+        type: string
+    executor: terraform-executor
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ./
+      - *configure-terraform-cloud
+      - run:
+          name: Terraform Plan
+          command: |
+            cd artifacts/terraform/<< parameters.env >>
+            terraform init
+            terraform plan
   terraform-plan-and-apply:
     parameters:
       env:
@@ -235,11 +251,6 @@ workflows:
             branches:
               only:
                 - main
-      - hold:
-          type: approval
-          name: approval
-          requires:
-            - deploy-to-aws-cloudfront-dev
       - terraform-validate:
           context: Web
           name: terraform-validate-prod
@@ -251,6 +262,21 @@ workflows:
             branches:
               only:
                 - main
+      - terraform-plan:
+          context: Web
+          name: terraform-plan-prod
+          requires:
+            - terraform-validate-prod
+          env: prod
+          filters:
+            branches:
+              only:
+                - main
+      - hold:
+          type: approval
+          name: prod-approval
+          requires:
+            - terraform-plan-prod
       - terraform-plan-and-apply:
           context: Web
           name: terraform-plan-and-apply-prod
