--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -267,16 +267,16 @@ workflows:
             branches:
               only:
                 - main
-      - terraform-destroy:
-          context: Web
-          name: terraform-destroy-dev
-          requires:
-            - deploy-to-aws-cloudfront-dev
-          env: dev
-          filters:
-            branches:
-              only:
-                - main
+      # - terraform-destroy:
+      #     context: Web
+      #     name: terraform-destroy-dev
+      #     requires:
+      #       - deploy-to-aws-cloudfront-dev
+      #     env: dev
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
       - terraform-validate:
           context: Web
           name: terraform-validate-prod
@@ -328,13 +328,13 @@ workflows:
             branches:
               only:
                 - main
-      - terraform-destroy:
-          context: Web
-          name: terraform-destroy-prod
-          requires:
-            - deploy-to-aws-cloudfront-prod
-          env: prod
-          filters:
-            branches:
-              only:
-                - main
+      # - terraform-destroy:
+      #     context: Web
+      #     name: terraform-destroy-prod
+      #     requires:
+      #       - deploy-to-aws-cloudfront-prod
+      #     env: prod
+      #     filters:
+      #       branches:
+      #         only:
+      #           - main
