--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,8 +96,8 @@ jobs:
           command: |
             export HEY=hye
             CURRENT_VERSION=$(jq -r '.version' package.json)
+            IFS='.' read -r -a VERSION_PARTS <<< "$CURRENT_VERSION"
       - *build-project-dev
-        # IFS='.' read -r -a VERSION_PARTS <<< "$CURRENT_VERSION"
         # PATCH_VERSION=${VERSION_PARTS[2]}
         # echo "$PATCH_VERSION"
         # NEW_PATCH_VERSION=$((PATCH_VERSION + 1))
