--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,8 +86,8 @@ jobs:
             echo "bumping version"
             CURRENT_VERSION=$(jq -r '.version' package.json)
             echo "$CURRENT_VERSION"
+            IFS='.' read -r -a VERSION_PARTS <<< "$CURRENT_VERSION"
         # CURRENT_VERSION=$(jq -r '.version' package.json)
-        # IFS='.' read -r -a VERSION_PARTS <<< "$CURRENT_VERSION"
         # PATCH_VERSION=${VERSION_PARTS[2]}
         # echo "$PATCH_VERSION"
         # NEW_PATCH_VERSION=$((PATCH_VERSION + 1))
@@ -258,10 +258,10 @@ workflows:
           context: Web
           # requires:
           #   - linting
-      - build:
-          context: Web
-          requires:
-            - bump-version
+      # - build:
+      #     context: Web
+      #     requires:
+      #       - bump-version
       # - terraform-validate:
       #     context: Web
       #     name: terraform-validate-dev
