--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,7 +86,7 @@ jobs:
             echo "bumping version"
             CURRENT_VERSION=$(jq -r '.version' package.json)
             echo "$CURRENT_VERSION"
-            IFS='.' read -r -a VERSION_PARTS <<< "$CURRENT_VERSION"
+            IFS='.' read -ra VERSION_PARTS <<< "$CURRENT_VERSION"
         # CURRENT_VERSION=$(jq -r '.version' package.json)
         # PATCH_VERSION=${VERSION_PARTS[2]}
         # echo "$PATCH_VERSION"
