--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
           command: |
             echo "bumping version"
             CURRENT_VERSION=$(jq -r '.version' package.json)
-            IFS='.' read -a VERSION_PARTS <<< "0.0.1"
+            IFS='.' read -a VERSION_PARTS \<<< "0.0.1"
         # IFS='.' read -ra VERSION_PARTS <<< "$CURRENT_VERSION"
         # CURRENT_VERSION=$(jq -r '.version' package.json)
         # PATCH_VERSION=${VERSION_PARTS[2]}
