--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,13 +86,13 @@ jobs:
             echo "bumping version"
             CURRENT_VERSION=$(jq -r '.version' package.json)
             IFS='.' read -r -a VERSION_PARTS \<<< "0.0.1"
-        # IFS='.' read -ra VERSION_PARTS <<< "$CURRENT_VERSION"
-        # CURRENT_VERSION=$(jq -r '.version' package.json)
-        # PATCH_VERSION=${VERSION_PARTS[2]}
-        # echo "$PATCH_VERSION"
-        # NEW_PATCH_VERSION=$((PATCH_VERSION + 1))
-        # echo "$NEW_PATCH_VERSION"
-        # NEW_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.$NEW_PATCH_VERSION"
+            CURRENT_VERSION=$(jq -r '.version' package.json)
+            PATCH_VERSION=${VERSION_PARTS[2]}
+            echo "$PATCH_VERSION"
+            NEW_PATCH_VERSION=$((PATCH_VERSION + 1))
+            echo "$NEW_PATCH_VERSION"
+            NEW_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.$NEW_PATCH_VERSION"
+            echo "$NEW_VERSION"
         # jq ".version = \"$NEW_VERSION\"" package.json > package.tmp.json && mv package.tmp.json package.json
       # - *build-project-dev
   build:
