--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,7 +83,12 @@ jobs:
       - run:
           name: Bump Version and commit
           command: |
+            git config --global user.email "ci@ribbiot.com"
+            git config --global user.name "CircleCI"
             npm version --patch
+            git push origin main
+            export CURRENT_VERSION=$(jq -r '.version' package.json)
+            echo $CURRENT_VERSION
       # CURRENT_VERSION=$(jq -r '.version' package.json)
       # IFS='.' read -r -a VERSION_PARTS \<<< "0.0.1"
       # CURRENT_VERSION=$(jq -r '.version' package.json)
