--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
           command: |
             git config --global user.email "ci@ribbiot.com"
             git config --global user.name "CircleCI"
-            npm version --patch
+            yarn version --patch
             git push https://${GITHUB_ACCESS_TOKEN}@github.com/jacobusa/react-terraform-aws.git main
             export CURRENT_VERSION=$(jq -r '.version' package.json)
             echo $CURRENT_VERSION
