--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -255,15 +255,15 @@ jobs:
               aws cloudfront create-invalidation --distribution-id ${AWS_CLOUDFRONT_DISTRIBUTION_ID} --path /\*
             fi
 workflows:
-  bump-version-on-main:
-    jobs:
-      - bump-version:
-          context: Web
-          filters:
-            branches:
-              only: main
-            tags:
-              ignore: /^v.*/
+  # bump-version-on-main:
+  #   jobs:
+  #     - bump-version:
+  #         context: Web
+  #         filters:
+  #           branches:
+  #             only: main
+  #           tags:
+  #             ignore: /^v.*/
   build_and_deploy:
     jobs:
       - setup:
