--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -255,15 +255,15 @@ jobs:
               aws cloudfront create-invalidation --distribution-id ${AWS_CLOUDFRONT_DISTRIBUTION_ID} --path /\*
             fi
 workflows:
-  bump-version-on-main:
-    when:
-      and:
-        - equal: [main, << pipeline.git.branch >>]
-        - not:
-            matches: { pattern: /^v.*/, value: << pipeline.git.tag >> }
-    jobs:
-      - bump-version:
-          context: Web
+  # bump-version-on-main:
+  #   when:
+  #     and:
+  #       - equal: [main, << pipeline.git.branch >>]
+  #       - not:
+  #           matches: { pattern: /^v.*/, value: << pipeline.git.tag >> }
+  #   jobs:
+  #     - bump-version:
+  #         context: Web
 
   build_and_deploy:
     when:
