--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,8 +85,10 @@ jobs:
           command: |
             git config --global user.email "ci@ribbiot.com"
             git config --global user.name "CircleCI"
+            yarn config set version-git-message "Upgrade to version %s"
+            git config --global push.followTags true
             yarn version --patch
-            git push https://${GITHUB_ACCESS_TOKEN}@github.com/jacobusa/react-terraform-aws.git main --tags
+            git push https://${GITHUB_ACCESS_TOKEN}@github.com/jacobusa/react-terraform-aws.git main --follow-tags
             export CURRENT_VERSION=$(jq -r '.version' package.json)
             echo $CURRENT_VERSION
       # git push origin main
