--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -268,8 +268,11 @@ workflows:
       - bump-version:
           context: Web
           filters:
+            branches:
+              only:
+                - main
             tags:
-              ignore: /^v.*/
+              ignore: /.*/
 
   build_and_deploy:
     when:
