--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -259,7 +259,11 @@ jobs:
 workflows:
   bump-version-on-main:
     when:
-      equal: [main, << pipeline.git.branch >>]
+      and:
+        - equal: [main, << pipeline.git.branch >>]
+        - not:
+            matches: { pattern: /^v.*/, value: << pipeline.git.tag >> }
+
       # and:
       #   - not:
       #       matches: { pattern: /^v.*/, value: << pipeline.git.tag >> }
